# Hush

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  test_smoke.py
.github/workflows/: ci.yml
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/docs/: api-integration.md
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: app.dart  main.dart
apps/mobile/lib/app/: app.dart  app_router.dart  (+2 more)
apps/mobile/linux/: CMakeLists.txt
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
design/: DESIGN_REVIEW_BOARD.md  PRODUCT_CANON.md  PRODUCT_SPECIFICATION.md
design/adr/: ADR-001-flutter.md  ADR-002-rust-backend.md  ADR-003-conversation-vs-chat.md  ADR-004-no-read-receipts.md  ADR-005-no-typing-indicators.md  ADR-006-no-online-status.md  ADR-007-private-vs-e2ee.md  ADR-008-no-permanent-history.md  ADR-009-no-phone-email.md  ADR-010-no-contact-discovery.md  ADR-011-notifications-by-default.md  ADR-012-provider-state-management.md  ADR-013-no-analytics.md
docs/: README.md  authentication-flow.md  development.md  project-status.md  realtime-architecture.md
docs/architecture/: Advanced Architecture & 10-Year Platform Roadmap.md  Complete Technical Specification.md  Database, Backend API & Data Architecture Deep Dive.md  Engineering Blueprint & Technical Implementation Plan.md  Engineering Execution Roadmap.md  Technical Architecture & Cryptographic Design.md  backend-architecture.md  data-flow.md  deployment.md  security-model.md  system-overview.md
docs/decisions/: 0001-final-technology-stack.md
docs/product/: Business Strategy & Company Blueprint.md  Design_System_&_UI_UX_Specification.md  Founder Operating Manual.md  Investor Pitch Deck Blueprint.md  MVP Execution Plan (Handoff).md  MVP Execution Plan.md  UX Design System & User Experience Specification.md  Users, Personas, User Journeys,MVP_Scope&UX.md  Vision & Philosophy.md  figma-foundation.md  sprint-1-definition.md  sprint-2-definition.md  sprint-3-definition.md  sprint-4-definition.md  sprint-5-definition.md  sprint-6-definition.md  sprint-7-definition.md
docs/security/: Security & Privacy Deep Dive.md  Security Threat Model & Cryptographic Design.md  Security Whitepaper, Roadmap & Business Strategy.md  security-baseline.md
infrastructure/docker/: docker-compose.yml
services/auth/: Cargo.toml  Dockerfile
services/auth/migrations/: 001_create_users_and_sessions.sql
services/auth/src/: config.rs  db.rs  main.rs  models.rs  routes.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: config.rs  health.rs  main.rs  ws.rs
services/identity/: Cargo.toml  Dockerfile
services/identity/migrations/: 001_create_devices.sql  002_create_challenges.sql  003_create_exchange_keys.sql
services/identity/src/: config.rs  db.rs  main.rs  models.rs  routes.rs
services/messaging/: Cargo.toml  Dockerfile
services/messaging/migrations/: 001_create_conversations_and_messages.sql  002_add_conversation_status.sql  003_add_group_support.sql
services/messaging/src/: config.rs  db.rs  main.rs  models.rs  routes.rs
(+259 files in other folders)
